--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Poppins:wght@400;500;600;700&display=swap");
 
 * {
-  @apply font-[Poppins,sans-serif];
+  @apply font-[Poppins,sans-serif] scroll-smooth;
 }
 
 body {
